--- a/inspec.yml
+++ b/inspec.yml
@@ -8,7 +8,10 @@ summary: 'InSpec Profile to validate the CIS AWS Foundations Benchmark v1.1.0'
 version: 1.0.5
 supports:
   - platform: aws
-
+  
+depends:
+- name: inspec-aws
+  git: https://github.com/inspec/inspec-aws.git
 
 attributes:
   - name: default_aws_region
